# Business-Chatting-System

./: .gitignore  RDD.md  README.md  macro.py  macro_a.py  macro_b.py  macro_c.py  movie_bot.py  pyproject.toml
airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
config/: ip
dags/: alarm_tutorial.py  consumer.py  log2parquet.py
data/: toparquet..ipynb
data/csv/: data.csv
data/parquet/: p.parquet
src/bcs/: .main.py.swp  .system_bot.py.swp  __main__.py  aleam_bot.py  chatbot.py  chatbot1.py  chatbot2.py  chatbot4.py  control_bot.py  cur_main.py  cur_t.py  cur_test.py  main.py  main_will_change.py  movie_bot.py  prod_test.py  system_bot.py  test_cur_main.py  textual_main.py
src/bcs/tmp/: textual_main.py
