[project]
name = "BCS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DE32/4th_Team", email = "elnath1002@naver.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "textual>=0.73.0",
    "confluent-kafka>=2.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
]
[tool.pdm]
distribution = false
